# rebel-poker

./: .gitignore  CLAUDE.md  Makefile  README.md  belief_config.py  game_interface.py  pyproject.toml  run_kuhn.py  run_leduc.py
benchmarks/: bench_cfr_solvers.py  bench_river_cfr.py
cfr/: __init__.py  batched_mccfr.py  deep_cfr.py  fictitious_play.py  matrix_cfr.py  mccfr.py  solver.py  vectorized.py
docs/: apple_silicon_gpu.md  scaling-plan.md
eval/: __init__.py  exploitability.py  head_to_head.py  profiler.py  slumbot.py  training_tracker.py
hunl/: __init__.py  belief_state.py  game.py  rebel_trainer.py  subgame_solver.py  value_net.py
kuhn/: belief_state.py  cfr.py  game.py
leduc/: belief_state.py  card_abstraction.py  game.py
poker-engine/: Cargo.toml  pyproject.toml
poker-engine/benches/: ev_calc.rs  hand_eval.rs
poker-engine/src/: abstraction.rs  card.rs  ev.rs  eval.rs  lib.rs  python.rs  state.rs
poker-engine/tests/: test_python_integration.py
rebel/: data_logger.py  endgame_solver.py  leduc_trainer.py  rebel_trainer.py  value_net.py
river/: cards.py  game.py  rust_bridge.py  vector_cfr.py  vector_eval.py
rust_cfr/: Cargo.toml  pyproject.toml
rust_cfr/src/: lib.rs
sampling/: __init__.py  benchmark.py  large_benchmark.py  marginalization.py  mlx_marginalization.py
tests/: test_belief_config.py  test_eval.py  test_gpu_cfr.py  test_hunl.py  test_kuhn_cfr.py  test_leduc.py  test_marginalization.py  test_parity.py  test_sampling_marginalization.py  test_vectorized_tracker.py
ui/: server.py
ui/templates/: index.html
